--- a/assets/help.htm
+++ b/assets/help.htm
@@ -145,6 +145,12 @@ The OSM texture (WGS84) can be loaded only for surveys and cave projects opened 
 The texture displays the OSM lines.
 <br><p>
 
+It is possible to visualize a point (yellow dot) on the surface by entering the coordinates in the CRS of the model,
+or tracking the position with the GPS. In this case Android Location must be active and the app must have been
+given permissions to use it.<br>
+The app displays the last 10 points.
+<br><p> 
+
 <b>STATION ACTIONS</b><br>
 By default, when the stations are displayed, they can be selected tapping on the station point or name.<br>
 Station selection can be turned on/off with a long tap on the "station" button. When the stations are selectable
