GPS tracking on surface

--- a/assets/help.htm
+++ b/assets/help.htm
@@ -145,8 +145,11 @@ The OSM texture (WGS84) can be loaded only for surveys and cave projects opened 
 The texture displays the OSM lines.
 <br><p>
 
-It is possible to visualize a point (yellow dot) on the surface by entering the coordinates in the CRS of the model,
-or tracking the position with the GPS. In this case Android Location must be active and the app must have been
+It is possible to visualize a point (yellow dot) on the surface by entering the East/North coordinates in the CRS of the model.<br>
+
+Models loaded from TopoDroid can get also GPS points.
+If the app has permission to use the "Location" service, and this service is enabled, it is possible to
+get surface point with the Android GPS.<br>
 given permissions to use it.<br>
 The app displays the last 10 points.
 <br><p> 
