survey hide/show

--- a/assets/help.htm
+++ b/assets/help.htm
@@ -26,6 +26,7 @@ A few buttons have long-tap actions:
 <li><i>View</i>: Adjust the focal parameter of the perspective.</li>
 <li><i>Stations</i>: Toggle station selection on/off.</li>
 <li><i>Splays</i>: Select the display of surface/duplicate/commented legs.</li>
+<li><i>Color</i>: Select the surveys to show or hide.</li>
 </ul>
 <br><p>
 
