--- a/assets/help.htm
+++ b/assets/help.htm
@@ -15,7 +15,7 @@ The model is shown with a reference grid (blue north, green east) or triplet (re
 <li><i>Walls</i>: Show/hide walls (if created).</li>
 <li><i>Surface</i>: Show/hide surface DEM (if present).</li>
 <li><i>Color</i>: Centerline color-coding. White, by-survey, or depth.</li>
-<li><i>Grid</i>: Switch between grid and XYZ axis.</li>
+<li><i>Frame</i>: Switch between grid and XYZ axis.</li>
 </ul>
 <br>
 The button icons are adjusted to the state of the program.
@@ -25,8 +25,9 @@ A few buttons have long-tap actions:
 <ul>
 <li><i>View</i>: Adjust the focal parameter of the perspective.</li>
 <li><i>Stations</i>: Toggle station selection on/off.</li>
-<li><i>Splays</i>: Select the display of surface/duplicate/commented legs.</li>
+<li><i>Splays</i>: Manually insert a leg.</li>
 <li><i>Color</i>: Select the surveys to show or hide.</li>
+<li><i>Frame</i>: Select the display of surface/duplicate/commented legs.</li>
 </ul>
 <br><p>
 
@@ -34,6 +35,7 @@ A few buttons have long-tap actions:
 <ul>
 <li><i>Open file</i>: Select a survey file from the working folder.</li>
 <li><i>Export</i>: Export dialog.</li>
+<li><i>BT surveys</i>: Bluetooth survey list</li>
 <li><i>Info</i>: Survey statistics.</li>
 <li><i>3D-Rose diagram</i>: Distribution of 3D directions.</li>
 <li><i>Rose diagram</i>: Distribution of azimuth directions.</li>
@@ -65,7 +67,8 @@ A few buttons have long-tap actions:
 <li><i>Split triangles</i>: Whether to split intersecting wall triangles</li>
 <li><i>Randomize points</i>: Add a small random vector to splays</li>
 <li><i>Stretch walls</i>: Shift wall points by a small quantity along the leg</li>
-<li><i>Powercrust</i>: Algorithm "delta" parameter.</li>
+<li><i>Powercrust</i>: Algorithm "delta" parameter</li>
+<li><i>Bluetooth device</i>: name of the Bluetooth device.</li>
 </ul>
 <br><p>
 
